test/netlist/error/unknown-parametrized-block.bop
A(a) = b
where
  b = Unknown[1](a);
end where;
